***   VirtuaWin Revision History   ***
--------------------------------------

Ver 2.6 2002/xx/xx 
* Bugfix: Alternative way of hiding windows. This solves the disappearing 
  Explorer bug
* Bugfix: Saving of sticky state for "User windows" is now fixed
* Bugfix: Problems with saving desktop and stickiness state of applications 
  containing spaces in their classnames
* Taskbar warp now works for all locations of the taskbar. Thanks to Philip Walford
* Double click in the module list will bring up module config window (if any)
* Option to hide the system tray icon
* Trying to start-up a second VirtuaWin instance will bring up setup window
* Classname will now always be "VirtuaWinMainClass" and not version dependent
----------------------------

Ver 2.5 2001/02/10
* Bugfix: Too many modules would corrupt data and cause undefined behavior,
  also increased the maximum number of modules handled from 5 to 10
* Bugfix: Fixed a bug with the username lookup for config file, could go wrong sometimes
* Bugfix: Fixed so that config update notification is sent upon apply and 
  only when something has changed upon hitting ok
* Bugfix: Fixed the sticky symbol in the winlist again, got lost during some changes
* Bugfix: Fixed bug with needing to have hot keys enabled for menu keys to work and 
  also better error message
* The WinList module now has classname for all applications
* Config file will also be written upon every apply and not if cancel is selected
* Added module message for getting the current desktop number
* Modules will now get a notification when desktop layout has changed since we 
  might have a new current desktop number after a change
* The question mark in the setup dialog is removed since it is no functionality for it
----------------------------

Ver 2.4 2000/08/19
* Bugfix: Added the code again that removes closed windows, this will avoid having closed 
  child windows reappearing again. This fix has the disadvantage of being able to remove 