@@ -1,4 +1,3 @@
-/* Wedit generated resource file */
 #include <windows.h>
 #include "resource.h"
 
@@ -34,9 +33,10 @@ BEGIN
 
     GROUPBOX        "Sticky", IDC_STATIC, 6, 217, 165, 23
     CONTROL         "StickyHot", IDC_HOTSTICKY, "msctls_hotkey32", 0x0 |
-                    WS_BORDER | WS_TABSTOP, 65, 224, 75, 12
-    LTEXT           "Toggle hot key", IDC_STATIC, 11, 227, 48, 8
-
+                    WS_BORDER | WS_TABSTOP, 49, 224, 70, 12
+    LTEXT           "Toggle key", IDC_STATIC, 11, 227, 38, 8
+    CONTROL         "+ WIN key",IDC_HOTSKW,"Button",BS_AUTOCHECKBOX | 
+                    BS_LEFTTEXT | WS_TABSTOP,120,227,47,9
 
     CONTROL         "Hot1", IDC_HOT1, "msctls_hotkey32", 0x0 | WS_BORDER |
                     WS_TABSTOP, 39, 51, 65, 12
@@ -149,7 +149,7 @@ IDD_PROPPAGE_ABOUT DIALOG 0, 0, 150, 150
 STYLE DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_BORDER
 FONT 8, "MS Sans Serif"
 BEGIN
-    GROUPBOX        "VirtuaWin  V2.6 Pre3", IDC_STATIC, 6, 2, 165, 81, 0x0300
+    GROUPBOX        "VirtuaWin  V2.6 Pre4", IDC_STATIC, 6, 2, 165, 81, 0x0300
     ICON            IDI_LARGEAPP, IDC_STATIC, 78, 14, 20, 20
     CTEXT           "Copyright (c) 1999, 2000, 2001, 2002 jopi", IDC_STATIC, 9, 38, 158, 8
     CTEXT           "virtuawin@home.se", IDC_MAILTO, 9, 48, 158, 8, 0x0100
